[package]
name = "fides"
version = "2.0.0"
edition = "2018"
license = "MIT"
description = "Fides is a wrapper for hashing with blake3, asymmetric cryptography on curve 25519 and symmetric cryptography with chacha20poly1305 written in Rust."
repository = "https://github.com/stelar-software/rust-fides"
readme = "README.md"

[dependencies]
blake3 = "1.3.1"
chacha20poly1305 = "0.9.0"
rand = "0.8.4"
rand_core = "0.6.3"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"