[package]
name = "fides"
version = "2.1.0"
edition = "2021"
license = "MIT"
description = "Fides is a library for hashing with blake3, asymmetric cryptography on curve 25519, symmetric cryptography with chacha20poly1305 and merkle tree functions written in Rust."
repository = "https://github.com/stelar-software/rust-fides"
readme = "README.md"

[dependencies]
blake3 = "1.3.1"
chacha20poly1305 = "0.9.0"
rand = "0.8.4"
rand_core = "0.6.3"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"