[package]
name = "fides"
version = "3.2.0"
edition = "2021"
license = "MIT"
description = "Fides is a library for cryptographic primitives."
repository = "https://github.com/stelar-labs/fides-rs"
readme = "README.md"

[dependencies]
blake3 = "1.3.1"
chacha20poly1305 = "0.9.0"
rand = "0.8.4"
rand_core = "0.6.3"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"
opis = "5.1.0"
sha2 = "0.10.6"
sha3 = "0.10.5"
astro-format = "2.1.0"